# hourly_music

./: Cargo.toml  README.md  config.toml  example-config.toml
src/: gui.rs  lib.rs  main.rs
