[package]
name = "hourly_music"
version = "0.1.0"
authors = ["Jacob Hughes <j@jacobhughes.me>"]
edition = "2018"
license = "GPL2.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.11"
serde = {version = "^1", features = ["derive"]}
toml = "^0.5"
chrono = {version = "^0.4", features = ["serde"]}

[patch.crates-io]
rodio = {git = "https://github.com/exrook/rodio"}
